5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1649_2704.log
== TEST (2019-04-10 16:20:21) 
-- CODE:
x = float(input("bote a nota aí"))
dependendo = input("S/N")
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:20:32) 
-- CODE:
x = float(input("bote a nota ai"))
dependendo = input("S/N")
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:24:36) 
-- CODE:
x = float(input("bote a nota ai"))
dependendo = input("S/N")
if dependendo.upper() == S:
	x = x*10/100
else:
	x = x
print (x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if dependendo.upper() == S:
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:25:37) 
-- CODE:
x = float(input("bote a nota ai"))
dependendo = input("S/N")
if (dependendo.upper()) == S:
	x = x*10/100
else:
	x = x
print (x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (dependendo.upper()) == S:
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:26:04) 
-- CODE:
x = float(input("bote a nota ai"))
opcao = input("S/N")
if (opcao.upper()) == S:
	x = x*10/100
else:
	x = x
print (x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (opcao.upper()) == S:
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:26:17) 
-- CODE:
x = float(input("bote a nota ai"))
opcao = input("S/N")
if (opcao.upper()) == "S":
	x = x*10/100
else:
	x = x
print (x)

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:26:46) 
-- CODE:
x = float(input("bote a nota ai"))
opcao = input("S/N")
if (opcao.upper()) == "S":
	x = x + x*0.10
else:
	x = x
print (x)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:26:52) 
-- CODE:
x = float(input("bote a nota ai"))
opcao = input("S/N")
if (opcao.upper()) == "S":
	x = x + x*0.10
else:
	x = x
print (x)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 16:26:54) 
-- CODE:
x = float(input("bote a nota ai"))
opcao = input("S/N")
if (opcao.upper()) == "S":
	x = x + x*0.10
else:
	x = x
print (x)

-- EXECUTION TIME:
0.152122
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
